# ml-re-adv

./: README.md  pyproject.toml
src/ml_re_adv/shared_assets/: exec.py
src/ml_re_adv/shared_assets/google_cloud/: Dockerfile  __init__.py  docker-compose.yml  entrypoint.sh  gcp-create.sh  gcp-init-remote.sh
src/ml_re_adv/tools/: compression.py  example_store.py  finished.py  local_model.py  model_inference.py  python_exec.py
src/ml_re_adv/utils/: __init__.py  data.py  extra_ast.py  extra_functools.py  extra_inspect.py  gcloud_subprocess.py  images.py  messages.py  metrics.py
